2011-02-15  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main-unprotected): Destroy the notify window
	before closing the display. This fix a bug when resetting/reloading
	clfswm.

2011-02-12  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (equal-wm-class-fun, equal-wm-name-fun)
	(raise-window-fun, raise-and-focus-window-fun): New functions.

	* src/config.lisp (*clfswm-terminal-cmd*): Switch from xterm to
	urxvt.
	(*never-managed-window-list*): Structure change to be more
	flexible. Let the choice to focus, raise and do nothing on never
	managed windows.

2011-02-09  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (mouse-focus-move/resize-generic): Take
	care of never managed windows to move or resize them if the raise
	parameter is true.

	* src/clfswm-internal.lisp (in-frame, in-window, in-child): New
	functions.

2011-02-08  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main-mode): Raise or not unmanaged windows
	following request in *never-managed-window-list*.

2011-02-05  Philippe Brochard  <pbrochard@common-lisp.net>

	* *: **** Release 1102 ****

2011-02-05  Desmond O. Chang <dochang@gmail.com>

	* src/keysyms.lisp: Add extended keysyms from stumpwm.

2011-02-01  Desmond O. Chang <dochang@gmail.com>

	* src/clfswm-util.lisp (run-or-raise): New function (thanks to
	Desmond O. Chang).

	* src/clfswm-internal.lisp (with-all-*): add a nil block.

2011-01-28  Desmond O. Chang <dochang@gmail.com>

	* src/clfswm-util.lisp (xdg-config-home): XDG_CONFIG_HOME should
	be $HOME/.config by default.

2010-12-29  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/osd.lisp (display-doc): Add another method where a
	CLFSWM native window is used to display the key documentation.

2010-12-27  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (with-xlib-protect): Force to revert to the
	main mode state.
